# notepad--

./: BUILD_GUIDE.md  CMakeLists.txt  NDD_项目分析报告.md  build_all.bat  build_compile.bat  build_package.bat
src/: CmpareMode.cpp  Encode.cpp  batchfindreplace.cpp  draglineedit.cpp  encodeconvert.cpp  findwin.cpp  langextset.cpp  langstyledefine.cpp  main.cpp  nddsetting.cpp  qt6compat.h  qtlangset.cpp  scintillaeditview.cpp  shortcutkeymgr.cpp  userlexdef.cpp
src/cceditor/: ccnotepad.cpp  ccnotepad.h
src/plugin/helloworld/: CMakeLists.txt
src/qscint/: CMakeLists.txt
src/qscint/src/: qscilexer.cpp
